--- a/ActiveWorkReminderApp/ActiveWorkReminderApp/App.config
+++ b/ActiveWorkReminderApp/ActiveWorkReminderApp/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <appSettings>
+    <add key="LearnMoreURL" value="https://github.com/shrawankick/Alertblock-wellbeing-/wikis" />
+    <add key="LogoImageURL" value="https://upload.wikimedia.org/wikipedia/commons/1/11/Test-Logo.svg"/>
+  </appSettings>
 </configuration>
